[tool.poetry]
name = "middleware-video-demo1"
version = "0.1.0"
description = ""
authors = ["thorbjoernl <51087536+thorbjoernl@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "middleware_video_demo1"}]

[tool.poetry.dependencies]
python = "^3.10"
middleware = { path = "../middleware/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
